# pse-fw

./: FW_VERSION  LICENSE  README.md  build.sh  west.yml
apps/hello_world/: README.rst  sample.yaml
libs/: LICENSE  VERSION.txt
scripts/: tag_checkout.sh
services/: CMakeLists.txt  Kconfig
services/eclite_fw/: CMakeLists.txt  Kconfig  prj.conf
services/ehl-oob/: CMakeLists.txt  Kconfig  prj_sam_e70_xplained.conf  readme.md
services/ehl-oob/adapter/: CMakeLists.txt  adapter.c  adapter.h  azure_iot.c  azure_iot.h  telit.c  telit.h  thingsboard.c  thingsboard.h
services/ehl-oob/common/: CMakeLists.txt  credentials.c  credentials.h  oob_errors.h  pse_app_framework.h  utils.h
services/ehl-oob/ehl/: CMakeLists.txt  ehl-oob.c  ehl-oob.h  main.c
services/ehl-oob/mqtt_client/: CMakeLists.txt  mqtt_client.c  mqtt_client.h
services/ehl-oob/pmc_client/: CMakeLists.txt  pmc_client.c
services/ehl-oob/sec_bios_ipc/: CMakeLists.txt  pse_oob_sec.c  pse_oob_sec.h  pse_oob_sec_base.h  pse_oob_sec_enum.h  pse_oob_sec_heci_client.c  pse_oob_sec_heci_client.h  pse_oob_sec_heci_client_internal.h  pse_oob_sec_internal.c  pse_oob_sec_internal.h  pse_oob_sec_status_code.h  unit_test_pse_oob_sec_internal.c  unit_test_sideband_drng.c
services/fw_version/: CMakeLists.txt  Kconfig  fw_version.c  fw_version.cmake
services/sys_service/: CMakeLists.txt  Kconfig  pm_syscall_handler.c  resource_table.c  sys_service.c
services/tsn_network_service/: CMakeLists.txt  Kconfig
services/user_app_framework/: CMakeLists.txt  Kconfig  non_user_mode_framework.c  user_app_framework.c
(+248 files in other folders)
