cmake_minimum_required(VERSION 3.13.1)
if(DEFINED ENV{BOARD})
if($ENV{BOARD} STREQUAL "sam_e70_xplained")
include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
endif($ENV{BOARD} STREQUAL "sam_e70_xplained")
endif(DEFINED ENV{BOARD})

if(CONFIG_BOARD_SAM_E70_XPLAINED)
	project(ehl-oob)
	target_include_directories(app PRIVATE .)
	message(STATUS "OOB being built as Application")
	FILE(GLOB app_sources adapter/*.c common/*.c mqtt_client/*.c ehl/ehl-oob.c pmc_client/pmc_client.c ehl/main.c)
	target_sources(app PRIVATE ${app_sources})
elseif(CONFIG_SOC_INTEL_PSE)
	message(STATUS "OOB being built as Library")
	add_subdirectory(adapter)
	add_subdirectory(mqtt_client)
	add_subdirectory(common)
	add_subdirectory(pmc_client)
	add_subdirectory(sec_bios_ipc)
	add_subdirectory(ehl)
	zephyr_include_directories(.)
endif()
